--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,4 +1,5 @@
 .header {
+    position: sticky;
     background: linear-gradient(#ebe5e5, hsl(235, 89%, 37%));
     height: 200px;
     justify-content: center;
