--- a/src/css/button.css
+++ b/src/css/button.css
@@ -1,18 +1,26 @@
-.button {
-    position: absolute;
-    width: 500px;
+.button-container {
+    display: flex;
+    width: 75%;
     height: 100px;
-    background-color: #ebe5e5;
+    margin: 0 auto;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(#ebe5e5, hsl(235, 89%, 37%));
     border: 1px solid #0c0101;
     border-radius: 50px;
-    color: #000;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: 'Roboto Slab', serif;
-    font-size: 35px;
+    margin-top: 100px;
+
 }
 
-.button:hover {
+.button-container:hover {
     background: rgba(0, 0, 0, 0.1);
-  }
+}
+
+.modal-button {
+    color: #000;
+    font-family: 'Roboto Slab', serif;
+    font-size: 35px;
+    background: transparent;
+    border: none;
+}
