added more css to the form

--- a/src/css/contactform.css
+++ b/src/css/contactform.css
@@ -4,16 +4,17 @@
     left: 50%;
     width: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background: lightblue; 
     padding: 20px;
-    box-shadow: 0 0 50px black;
+    box-shadow: 0 0 100px white;
     z-index: 1;
+    border-radius: 50px;
 
 }
 
 .contact-form-header {
     font-family: 'Roboto Slab', serif;
-    font-size: 45px;
+    font-size: 35px;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -26,6 +27,7 @@
 .contact-form {
     display: flex;
     flex-direction: column;
+    background: lightblue;   
     align-items: center;
     justify-content: center;
     margin: 0 auto;
@@ -39,7 +41,7 @@
     border: 1px solid #000;
     border-radius: 5px;
     padding: 5px;
-    margin-left: 5px;
+    width: 200px;
 }
 
 #contact-form-email {
@@ -48,7 +50,7 @@
     border: 1px solid #000;
     border-radius: 5px;
     padding: 5px;
-    margin-left: 10px;
+    width: 200px;
 }
 
 #contact-form-password {
@@ -57,24 +59,58 @@
     border: 1px solid #000;
     border-radius: 5px;
     padding: 5px;
-    margin-left: 10px;
+    width: 200px;
 }
 
+.dropdowns {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
 
 #contact-form-occupation {
-    height: 25px;
-    margin-bottom: 5px;
+    height: 30px;
+    margin-right: 5px;
     border: 1px solid #000;
     border-radius: 5px;
     padding: 5px;
-    margin-left: 5px;
+    width: 175px;
+   
+    
 }
 
+
 #contact-form-state {
-    height: 25px;
-    margin-bottom: 5px;
+    height: 30px;
+    display: flex;
     border: 1px solid #000;
     border-radius: 5px;
     padding: 5px;
-    margin-left: 5px;
+    width: 175px;
+    
+   
+}
+
+.submit-button {
+    color: #000;
+    font-family: 'Roboto Slab', serif;
+    font-size: 35px;
+    background: hsl(235, 63%, 51%);
+    width: 150px;
+    border-radius: 50px;
+
+
+}
+
+.submit-button:hover {
+    background: rgba(0, 0, 0, 0.1);
+}
+
+.close-button {
+    position: absolute;
+   left: 90%;
+   font-size: 25px;
+    font-family: 'Roboto Slab', serif;
+    border-radius: 50px;
+
 }
